--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -9,7 +10,7 @@
 
 header{
     width: 920px;
-    height: 150px;
+    
     background-color:rgb(248, 166, 248);
     margin: auto;
     margin-top: 10px;
@@ -28,6 +29,7 @@ ul li{
 }
 .navigazione{
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 main{
@@ -59,6 +61,7 @@ main{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 
 .container-2{
@@ -74,10 +77,14 @@ main{
 }
 
 .banner{
-    height: 40px;
+    
     width: 100%;
     background-color:rgb(174, 210, 245);
     margin-bottom: 15px;
+}
+
+.banner p{
+    padding-bottom: 40px;
 }
 
 .float-1{
@@ -111,6 +118,7 @@ main{
 .float-sfondo{
     height: 40%;
 }
+
 
 
 footer{
