--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 header{
     width: 920px;
     
-    background-color:rgb(248, 166, 248);
+   
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -49,7 +49,7 @@ main{
 .container-1{
     width: 920px;
     height: 350px;
-    
+    position: relative;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -63,11 +63,19 @@ main{
     object-fit: cover;
     
 }
+.scritta-container-1{
+    position: absolute;
+    width: 55%;
+    color: white;
+    bottom: 20px;
+    left: 50px;
+    
+}
 
 .container-2{
     width: 920px;
     
-    background-color:rgb(58, 143, 212);
+    
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -79,7 +87,7 @@ main{
 .banner{
     
     width: 100%;
-    background-color:rgb(174, 210, 245);
+   
     margin-bottom: 15px;
 }
 
@@ -90,8 +98,8 @@ main{
 .float-1{
     float: left;
     width: 25%;
-    height: 340px;
-    background-color: rgb(174, 210, 245);
+    
+    
     margin-bottom: 15px;
     
 }
@@ -99,8 +107,8 @@ main{
 .float-2{
     float: left;
     width: calc(50% - 20px);
-    height: 340px;
-    background-color: rgb(174, 210, 245);
+   
+   
     margin-right: 10px;
     margin-left: 10px;
     
@@ -110,22 +118,53 @@ main{
 .float-3{
     float: left;
     width: 25%;
-    height: 340px;
-    background-color:rgb(174, 210, 245) ;
+   
+   
     
 }
 
-.float-sfondo{
+.float-sfondo-1{
     height: 40%;
+    
+    background-size: 100%;
+    
 }
+.float-sfondo-2{
+    height: 40%;
+   
+    background-size: 100%;
+}
+.float-sfondo-3{
+    height: 40%;
+    
+    object-fit: cover;
+
+
+}
+.immagine-sfondo{
+  width: 100%;
+  height: 230px;
+  object-fit: cover;
+}
+
+h4{
+    padding:10px 10px;
+}
+
+p{
+    padding:10px
+}
+
+.overlay
 
 
 
 footer{
     width:920px;
     height: 30px;
-    background-color:rgb(255, 32, 255) ;
+   
     margin: auto;
+    text-align: center;
 }
 
 
